--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Fireweb</title>
@@ -7,8 +8,26 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!--<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBwDTSuMxM-bdjVSTb7TFUSgpZ5OW2LXlo",
+    authDomain: "fireweb-17028.firebaseapp.com",
+    databaseURL: "https://fireweb-17028.firebaseio.com",
+    storageBucket: "fireweb-17028.appspot.com",
+    messagingSenderId: "496648754798"
+  };
+  firebase.initializeApp(config);
+</script>-->
+
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 </body>
+
 </html>
